WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188372
[macOS] Scrollbars are not visible when using 3rd party mouse
https://bugs.webkit.org/show_bug.cgi?id=188372
Summary
[macOS] Scrollbars are not visible when using 3rd party mouse
Per Arne Vollan
Reported
2018-08-06 21:24:47 PDT
Legacy style scrollbars should be used in this case.
Attachments
Patch
(6.32 KB, patch)
2018-08-07 07:22 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2018-08-06 21:25:40 PDT
rdar://problem/41539295
Per Arne Vollan
Comment 2
2018-08-07 07:22:23 PDT
Created
attachment 346707
[details]
Patch
Simon Fraser (smfr)
Comment 3
2018-08-07 08:15:18 PDT
Comment on
attachment 346707
[details]
Patch How can we test this?
Per Arne Vollan
Comment 4
2018-08-07 08:49:04 PDT
(In reply to Simon Fraser (smfr) from
comment #3
)
> Comment on
attachment 346707
[details]
> Patch > > How can we test this?
Thanks for reviewing! I will create a bug to track creating a test for this.
Per Arne Vollan
Comment 5
2018-08-07 08:52:34 PDT
(In reply to Per Arne Vollan from
comment #4
)
> (In reply to Simon Fraser (smfr) from
comment #3
) > > Comment on
attachment 346707
[details]
> > Patch > > > > How can we test this? > > Thanks for reviewing! I will create a bug to track creating a test for this.
https://bugs.webkit.org/show_bug.cgi?id=188379
WebKit Commit Bot
Comment 6
2018-08-07 09:15:33 PDT
Comment on
attachment 346707
[details]
Patch Clearing flags on attachment: 346707 Committed
r234652
: <
https://trac.webkit.org/changeset/234652
>
WebKit Commit Bot
Comment 7
2018-08-07 09:15:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug